--- a/index.html
+++ b/index.html
@@ -7,8 +7,42 @@
         <title>Consulta</title>
     </head>
     <body>
-        <header></header>
-        <main class="consulta">
+        <header class="header">
+            <nav>
+                <ul>
+                    <li>
+                        <a class="menu__item">
+                            <img src="./src/img/icons/Calendario.svg" />
+                            Consultas
+                        </a>
+                    </li>
+                    <li>
+                        <a class="menu__item">
+                            <img src="./src/img/icons/clientes.svg" />
+                            Clientes
+                        </a>
+                    </li>
+                    <li>
+                        <a class="menu__item">
+                            <img src="./src/img/icons/relatorios.svg" />
+                            Relatórios
+                        </a>
+                    </li>
+                    <li>
+                        <a class="menu__item">
+                            <img src="./src/img/icons/menu.svg" />
+                            Menu
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="botao__flutuante">
+                <button>
+                    <img src="./src/img/icons/maisicone.svg" />
+                </button>
+            </div>
+        </header>
+        <main>
             <section class="consulta__perfil">
                 <img src="./src/img/perfil-1.jpg" alt="Imagem do perfil 1" />
                 <div class="consulta__conteudo">
